@@ -34,3 +34,17 @@ publishing {
         }
     }
 }
+
+// Needed when using ProjectBuilder
+class AddOpensArgProvider(private val test: Test) : CommandLineArgumentProvider {
+    override fun asArguments() : Iterable<String> {
+        return if (test.javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)) {
+            listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        } else {
+            emptyList()
+        }
+    }
+}
+tasks.withType<Test>().configureEach {
+    jvmArgumentProviders.add(AddOpensArgProvider(this))
+}
